--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.2.1",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
